@startuml

title __APP's Class Diagram__\n

  package com.example.android.miwok {
    class BuildConfig {
    }
  }
  

  package com.example.android.miwok {
    class ColorsActivity {
    }
  }
  

  package com.example.android.miwok {
    class FamilyActivity {
    }
  }
  

  package com.example.android.miwok {
    class MainActivity {
    }
  }
  

  package com.example.android.miwok {
    class NumbersActivity {
    }
  }
  

  package com.example.android.miwok {
    class PhrasesActivity {
    }
  }
  

  package android.support.coreutils {
    class R {
    }
  }
  

  package android.support.v7.appcompat {
    class R {
    }
  }
  

  package android.support.v4 {
    class R {
    }
  }
  

  package android.support.v7.recyclerview {
    class R {
    }
  }
  

  package android.support.mediacompat {
    class R {
    }
  }
  

  package android.support.coreui {
    class R {
    }
  }
  

  package android.support.compat {
    class R {
    }
  }
  

  package android.support.graphics.drawable {
    class R {
    }
  }
  

  package android.arch.core {
    class R {
    }
  }
  

  package android.support.design {
    class R {
    }
  }
  

  package android.support.fragment {
    class R {
    }
  }
  

  package android.support.v13 {
    class R {
    }
  }
  

  package com.example.android.miwok {
    class R {
    }
  }
  

  package android.arch.lifecycle {
    class R {
    }
  }
  

  package android.arch.lifecycle {
    package android.arch.lifecycle.livedata.core {
      class R {
      }
    }
  }
  

  package android.arch.lifecycle {
    package android.arch.lifecycle.viewmodel {
      class R {
      }
    }
  }
  

  package android.support.transition {
    class R {
    }
  }
  

  package android.support.graphics.drawable {
    package android.support.graphics.drawable.animated {
      class R {
      }
    }
  }
  

  package com.example.android.miwok {
    class Word {
    }
  }
  

  package com.example.android.miwok {
    class WordAdapter {
    }
  }
  

  ColorsActivity -up-|> AppCompatActivity
  FamilyActivity -up-|> AppCompatActivity
  MainActivity -up-|> AppCompatActivity
  NumbersActivity -up-|> AppCompatActivity
  PhrasesActivity -up-|> AppCompatActivity
  WordAdapter -up-|> ArrayAdapter


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
